--- a/client/src/global/globals.css
+++ b/client/src/global/globals.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cardo&family=Montserrat:ital@1&family=Playfair+Display&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital@1&family=Playfair+Display&display=swap');
 .carousel-status {
   display: none;
 }
